# OOP_laba_5

./: CMakeLists.txt  README.md  main.cpp
include/: Array.hpp  MemoryResource.hpp
src/: MemoryResource.cpp
test/: Allocation_tests.cpp  Iterator_tests.cpp
